fix navbar spacing

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -86,8 +86,8 @@ p
 
 .navbar li
   float left
-  padding-left 0
-  padding-right 3em
+  padding-left 1em
+  padding-right 2em
 
 .navbar a 
   text-decoration none
